# python-odmltables

./: .gitignore  .travis.yml  LICENSE  LICENSE.txt  README  README.md  README.rst  odmltables-gui  odmltables-gui.bat  odmltables.desktop  pyproject.toml  requirements.txt  requirements_doc.txt  requirements_gui.txt  setup.py
.github/workflows/: python-package-conda.yml  run_pytest.yml
continuous_integration/: install.sh  test_script.sh
data/testresults/: test_csv_class.csv
doc/: Makefile  authors.rst  conf.py  documentation.rst  environment.yml  index.rst  install.rst  introduction.rst  modules.rst  tutorial.rst  whatisnew.rst
doc/source/: colors.xls  conf.py  tutorial.rst
examples/example1/: example1-1.csv  example1-2.csv  example1-2.odml  example1.py
examples/example2/: example2.py
examples/example3/: Example3.py  example3.py  odml.xsl
logo/: odMLtables.eps
odmltables/: __init__.py  compare_section_csv_table.py  compare_section_table.py  compare_section_xls_table.py  create_examples.py  info.json  odml_csv_table.py  odml_table.py  odml_xls_table.py  start_gui.sh  xls_style.py
odmltables/gui/: compsectionpages.py  compsectionwiz.py  converterpages.py  converterwiz.py  filterpages.py  filterwiz.py  generatetemplatepages.py  generatetemplatewiz.py  main.py  mainwindow.py  mergepages.py  mergewiz.py  pageutils.py  settings.py  wizutils.py
odmltables/tests/: create_test_odmls.py  test_compare_section_table.py  (+3 more)
odmlviz/: compare_cross_odml.py  compare_section_csv_table.py  create_examples.py  xls_style.py
tests/: create_test_odmls.py  test_compare_section_table.py  test_odml_csv_table.py  test_odml_table.py  test_odml_xls_table.py
tutorials/: Scenarios.ipynb
wizard/: compsectionpages.py  compsectionwiz.py  converterpages.py  converterwiz.py  filterpages.py  filterwiz.py  generatetemplatepages.py  generatetemplatewiz.py  main.py  mainwindow.py  mergepages.py  mergewiz.py  odml2tablewiz.py  odmlconverterpages.py  odmlconverterwiz.py  pages.py  pageutils.py  settings.py  table2odmlwiz.py
(+52 files in other folders)
